--- a/reviews.html
+++ b/reviews.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="subscribe"></div>
+        <div class="subscribe">
            <form>
              <input type="email"placeholder="Enter email">
              <button type="submit">subscribe to my blog</button>
