--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
     <label>Last Name</label>
     <input type="text" placeholder="Your last name...">
 
-<label>country</label>
+<label>Country</label>
 <select>
     <option>Romania</option>
     <option>Moldova</option>
