--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p class="descript"></p>
 
     <h1 class="title">1. Gorditas</h1>
-        <h5 class="under_title first">potato dish</h5>
+        <h5 class="under_title first">FOOD</h5>
         <h5 class="under_title">Added by</h5>
         <h5 class="under_title">Adeline</h5>
         <h5 class="under_title">.</h5>
