--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="subscribe">
            <form>
              <input type="email"placeholder="Enter email">
-             <button type="submit">subscribe to my blog</button>
+             <button id="hover" type="submit">Subscribe</button>
            </form>
         </div>
 
