--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <div class="subscribe">
-           <form>
-             <input type="email"placeholder="Enter email">
-             <button type="submit">subscribe to my blog</button>
-           </form>
-        </div>
+            <form>
+              <input type="email"placeholder="Enter email">
+              <button id="hover" type="submit">Subscribe</button>
+            </form>
+         </div>
 
     </header>
     <a href="index.html" class="menu">Home</a>
