--- a/reviews.html
+++ b/reviews.html
@@ -8,13 +8,12 @@
 
 </head>
 <body>
-    <header>
-        <div class="subscribe">
-           <form>
-             <input type="email"placeholder="Enter email">
-             <button type="submit">subscribe to my blog</button>
-           </form>
-        </div>
+    <div class="subscribe">
+        <form>
+          <input type="email"placeholder="Enter email">
+          <button id="hover" type="submit">Subscribe</button>
+        </form>
+     </div>
 
     </header>
    
