--- a/reviews.html
+++ b/reviews.html
@@ -130,7 +130,7 @@
             <span class="star">&#9734</span>
         </p>
         <p>Good recipe</p>
-
+    </div>
         <div class="review">
         <h2>9. Potato Tacos</h2>
         <p class="rating">
